# Changelog


## 1.1.4.9xxx (under development)

* [BUGFIX] [Python] #80: fixed adjustment for `nmslib_n_neighbors`
    in small samples.

* [BUGFIX] Some external cluster validity measures
    now handle NaNs better and are slightly less prone to round-off errors.

* [R] In `normalizing_permutation` and external cluster validity measures,
    the input matrix can now be of the type `double`.


## 1.1.4 (2023-03-31)

*  [Python] The GIc algorithm is no longer marked as experimental;
   its description will be provided in a forthcoming paper; see
   <https://doi.org/10.48550/arXiv.2303.05679>.


## 1.1.3 (2023-01-17)

*  [R] `mst.default` now throws an error if any element in the input matrix
   is missing/infinite.

*  [Python] Fixed the call to `mlpack.emst` that stopped working
   with the new version of `mlpack`.


## 1.1.2 (2022-09-17)

*  [Python and R] `adjusted_asymmetric_accuracy`
   now accepts confusion matrices with fewer columns than rows.
   Such "missing" columns are now treated as if they were filled with 0s.

*  [Python and R] `pair_sets_index`, and `normalized_accuracy` return
   the same results for non-symmetric confusion matrices and transposes thereof.


## 1.1.1 (2022-09-15)

*  [Python] #75: `nmslib` is now optional.

*  [BUILD TIME]: The use of `ssize_t` was not portable.


## 1.1.0 (2022-09-05)

*  [GENERAL] The below-mentioned cluster validity measures are discussed
   in more detail at <https://clustering-benchmarks.gagolewski.com>.

*  [Python and R] New function:
   `compare_partitions.adjusted_asymmetric_accuracy`.

*  [Python and R] Implementations of the so-called internal cluster
   validity measures discussed in
   DOI: [10.1016/j.ins.2021.10.004](https://doi.org/10.1016/j.ins.2021.10.004);
   see our (GitHub-only) [CVI](https://github.com/gagolews/optim_cvi) package
   for R. In particular, the generalised Dunn indices are based on the code
   originally authored by Maciej Bartoszuk. Thanks.
