@@ -21,12 +21,13 @@ genieclust Python Package
 # ############################################################################ #
 
 # version string, e.g., "1.0.0.9001" or "1.1.1"
-__version__ = "1.1.4.9001"
+__version__ = "1.1.4.9002"
 
 
 from . import plots
 from . import inequity
 from . import tools
 from . import compare_partitions
+from . import cluster_validity
 from . import internal
 from .genie import Genie, GIc
